changed json example

--- a/nodes/localhost.json.example
+++ b/nodes/localhost.json.example
@@ -24,7 +24,7 @@
   },
   "authorization": {
     "sudo": {
-      "groups"      : ["<user_name>"],
+      "groups"      : ["<group_name>"],
       "users"       : ["<user_name>"],
       "passwordless": true
     }
