fixed and renewed vagrant with some cookbooks

--- a/nodes/localhost.json.example
+++ b/nodes/localhost.json.example
@@ -11,7 +11,8 @@
     "recipe[postgresql::server]",
     "recipe[nginx]",
     "recipe[nginx::apps]",
-    "recipe[redis::server]",
+    "recipe[redis::install_from_package]",
+    "recipe[redis::client]",
     "recipe[monit]",
     "recipe[monit::ssh]",
     "recipe[monit::nginx]",
@@ -43,7 +44,7 @@
     }
   },
   "nginx": {
-    "user"          : "<user_name>",
+    "users"          : "<user_name>",
     "distribution"  : "<linux_distribution>",
     "components"    : ["main"],
     "worker_rlimit_nofile": 30000,
@@ -126,8 +127,8 @@
   "rvm" : {
     "user_installs": [
       {
-        "user"         : "<user_name>",
-        "default_ruby" : "2.3.1"
+        "users"         : "<user_name>",
+        "default_ruby" : "2.3.3"
       }
     ]
   },
